# folioforge

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
src/folioforge/: cli.py
src/folioforge/assets/: example.json  example_with_conf.json
src/folioforge/extraction/: docling.py  gemini.py  marker.py  protocol.py  two_phase.py
src/folioforge/extraction/layout/: doclayout_yolo.py  protocol.py
src/folioforge/extraction/ocr/: paddle.py  protocol.py
src/folioforge/models/: document.py  labels.py
src/folioforge/output/: html.py  json.py  markdown.py  passthrough.py  protocol.py
src/folioforge/pipeline/: dask.py  protocol.py  simple.py
src/folioforge/postprocessor/: debug.py  label_filter.py  protocol.py
src/folioforge/preprocessor/: __init__.py  image.py  pdf.py  preprocessor.py  protocol.py
tests/: conftest.py  test_docling.py  test_extraction.py  test_output.py  test_postprocessor.py  test_preprocessors.py
