[project]
name = "folioforge"
version = "0.1.0"
description = "A library wrapping various PDF extraction tools with common workflows and tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dask[distributed]>=2025.9.1",
  "doclayout-yolo>=0.0.4",
  "docling>=2.55.1",
  "huggingface-hub>=0.35.3",
  "opencv-python>=4.12.0.88",
  "paddleocr>=3.2.0",
  "paddlepaddle>=3.2.0",
  "pydantic>=2.12.0",
  "pymupdf>=1.26.4",
  "typer>=0.19.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]

[project.scripts]
folioforge = "folioforge.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # pyupgrade
  "UP",
  # flake8-simplify
  "SIM",
  # unused-noqa https://docs.astral.sh/ruff/rules/unused-noqa/
  "RUF100",
  # flake8-bugbear checks are pretty useful
  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "B",
]

ignore = ["SIM108", "SIM102"]


[build-system]
requires=["uv_build>=0.9.0,<0.10.0"]
build-backend="uv_build"
